Reset password pages

--- a/app/lib/mail/reset_password_template.mjml
+++ b/app/lib/mail/reset_password_template.mjml
@@ -19,10 +19,10 @@
           >Reset your password</mj-text
         >
         <mj-text line-height="1.6"
-          >Hello {{user_name}}!<br />That's okay, it happens! Click on the
-          button below to reset your password.</mj-text
+          >Hello {{user_name}}!<br />That's okay, it happens to the best of us!
+          Click on the button below to reset your password.</mj-text
         >
-        <mj-button href="{{verification_link}}" class="verification-button"
+        <mj-button href="{{reset_link}}" class="verification-button"
           >Reset password</mj-button
         >
         <mj-text font-size="14px" color="#555"
